# emagddm

./: .gitignore  CMakeLists.txt  CROSS_PLATFORM_GUIDE.md  README.md  superlu_test_report.txt  test_mpiomp_compilation.sh  test_serialization.cpp
FE-EM-FETIDP/: .gitignore  CMakeLists.txt  README.md
FE-EM-FETIDP/include/: CMakeLists.txt
FE-EM-FETIDP/include/app/: solver_app.hpp
FE-EM-FETIDP/include/fetidp/: fetidp_context.hpp
FE-EM-FETIDP/include/numeric/: sparse_matrix.hpp
FE-EM-FETIDP/include/tool/: logger.hpp  spdlog_adapter.hpp  xml_interface.hpp
FE-EM-FETIDP/lib/pugixml/: CMakeLists.txt
FE-EM-FETIDP/src/: CMakeLists.txt  main.cpp
FE-EM-FETIDP/src/fe_em/: fe_em_mesh.cpp
FE-EM-FETIDP/src/tool/: spdlog_adapter.cpp
FE-EM-FETIDP/test/: CMakeLists.txt  test_logger.cpp
docs/: coding_style.md  (+14 more)
include/: CMakeLists.txt  config.h  mpi_wrapper.h  omp_wrapper.h
include/app/: solver_app.hpp
include/fe_em/: element_geometry.hpp  em_dof_data.hpp  em_dof_manager.hpp  em_mesh_data.hpp  fe_em_mesh.hpp  global_edge_id_generator.hpp  mesh_graph_extractor.hpp  mesh_query.hpp  mesh_reader.hpp  multi_connected_domain.hpp  spanning_tree.hpp  tree_gauge.hpp
include/numeric/: block_csr_matrix.hpp  block_csr_matrix_impl.hpp  complex_matrix_ops.hpp  coo_matrix.hpp  coo_matrix_impl.hpp  csr_matrix.hpp  csr_matrix_impl.hpp  direct_solvers.h  eigen_solver_backends.h  electrostatic_integrator.hpp  em_adapter.hpp  em_assembly.hpp  em_direct_solvers.h  em_element_integrator_base.hpp  em_iterative_solvers.h  em_linear_solver.h  em_solver_backends.hpp  em_solver_factory.h  em_sparse_converter.h  gauss_quadrature.hpp  iterative_solvers.h  lagrange_element.hpp  magnetic_scalar_2d_integrator.hpp  magnetic_vector_3d_integrator.hpp  math_constants.hpp  matrix_attribute.hpp  matrix_market_io.hpp  matrix_market_io_impl.hpp  mumps_solver_backend.h  nedelec_element.hpp  preconditioner.hpp  preconditioner_impl.hpp  shape_function_base.hpp  shape_function_factory.hpp  solver_backend.h  sparse_base.hpp  sparse_converter.h  sparse_matrix.hpp  superlu_solver_backend.h  sym_csr_matrix.hpp  (+3 more)
include/solver/: boundary_condition_manager.hpp  capacitance_calculator.hpp  dc_conduction_integrator.hpp  dc_conduction_solver.hpp  electrostatic_force_calculator.hpp  electrostatic_solver.hpp  excitation_manager.hpp  field_data.hpp  joule_heating_calculator.hpp  physics_field.hpp  resistance_calculator.hpp  solver_scheduler.hpp
include/tool/: aedt_project_loader.hpp  association_map.hpp  base64_utils.hpp  em_enums.hpp  em_exception.hpp  em_exception_base.hpp  file_utils.hpp  format_adapter.hpp  fragmented_storage.hpp  id_generator.hpp  log_interface.hpp  logger.hpp  logger_factory.hpp  maxwell_converter_impl.hpp  maxwell_data_converter.hpp  maxwell_data_converter_impl.hpp  maxwell_data_structures.hpp  maxwell_parser.hpp  maxwell_parser_impl.hpp  maxwell_reader.hpp  operation_logger.hpp  project_data.hpp  project_loader.hpp  project_manager.hpp  project_validator.hpp  string_format.hpp  version_manager.hpp
lib/MUMPS/: CMakeLists.txt  Makefile.inc  build_windows.bat  build_windows.ps1
lib/MUMPS/PORD/: CMakeLists.txt
lib/MUMPS/libseq/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/app/: solver_app.cpp
src/fe_em/: element_geometry.cpp  em_dof_manager.cpp  fe_em_mesh.cpp  global_edge_id_generator.cpp  mesh_graph_extractor.cpp  mesh_query.cpp  multi_connected_domain.cpp  spanning_tree.cpp  tree_gauge.cpp
src/fetidp/: fetidp_context.cpp
src/numeric/: direct_solvers_mumps.cpp  direct_solvers_superlu.cpp  eigen_solver_backends.cpp  electrostatic_integrator.cpp  em_assembly.cpp  em_direct_solvers.cpp  em_direct_solvers_mumps.cpp  em_direct_solvers_mumps_complex.cpp  em_direct_solvers_superlu.cpp  em_iterative_solvers.cpp  em_sparse_converter.cpp  gauss_quadrature.cpp  iterative_solvers.cpp  lagrange_element.cpp  magnetic_scalar_2d_integrator.cpp  magnetic_vector_3d_integrator.cpp  mumps_solver_backend.cpp  nedelec_element.cpp  preconditioner.cpp  shape_function_factory.cpp  sparse_converter.cpp  sparse_matrix.cpp  superlu_solver_backend.cpp  unified_direct_solver.cpp
src/solver/: boundary_condition_manager.cpp  capacitance_calculator.cpp  dc_conduction_integrator.cpp  dc_conduction_solver.cpp  electrostatic_force_calculator.cpp  electrostatic_solver.cpp  excitation_manager.cpp  field_data.cpp  joule_heating_calculator.cpp  resistance_calculator.cpp  solver_scheduler.cpp
src/tool/: aedt_project_loader.cpp  association_map.cpp  boundary.cpp  em_enums.cpp  em_exception.cpp  file_utils.cpp  format_adapter.cpp  fragmented_storage.cpp  id_generator.cpp  log_interface.cpp  logger.cpp  logger_factory.cpp  material.cpp  maxwell_converter_impl.cpp  maxwell_parser.cpp  maxwell_parser_impl.cpp  maxwell_reader.cpp  mpi_wrapper.cpp  operation_logger.cpp  project_data.cpp  project_loader.cpp  project_manager.cpp  project_validator.cpp  spdlog_adapter.cpp  version_manager.cpp  xml_interface.cpp
test/: CMakeLists.txt  test_aedt_parsing.cpp  test_assembly.cpp  test_complex_mumps_context.cpp  test_dc_conduction_solver.cpp  test_eigen_extension.cpp  test_eigen_extension_simple.cpp  test_eigen_solver_backends_crtp.cpp  test_electrostatic_solver.cpp  test_em_element_integrator.cpp  test_em_tools.cpp  test_gauss_quadrature.cpp  test_ilu0_debug.cpp  test_image_extraction.cpp  test_linear_solver_edge.cpp  test_linear_solver_mixed_av.cpp  test_linear_solver_scalar.cpp  test_material_extraction.cpp  test_material_simple.cpp  test_maxwell_converter.cpp  test_maxwell_converter_main.cpp  test_maxwell_parser.cpp  test_mesh_graph_extractor.cpp  test_mpi_basic.cpp  test_multi_connected_domain.cpp  test_mumps_context.cpp  test_mumps_solver.cpp  test_omp_basic.cpp  test_prism15_scalar.cpp  test_prism6_mixed_av.cpp  test_pyramid5_edge.cpp  test_shape_function.cpp  test_spanning_tree.cpp  test_sparse_matrix_gtest_stage1.cpp  test_sparse_matrix_gtest_stage2.cpp  test_sparse_matrix_gtest_stage3.cpp  test_sparse_matrix_gtest_stage3_simple.cpp  test_sparse_matrix_stage1.cpp  test_sparse_matrix_stage2.cpp  test_superlu_comprehensive.cpp  (+8 more)
(+94 files in other folders)
